# web-based-rag-chatbot

./: .dockerignore  .env.example  .gitignore  README.md  app.py  config.py  database.py  docker-compose.yml  eval_service.py  llm_service.py  main.py  package-lock.json  prompts.py  pyproject.toml  requirements.txt  scratch_test.py  search_service.py  utils.py
altibbi_chatbot.egg-info/: PKG-INFO
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py
backend/src/chatbot/application/: auth_service.py  chat_service.py  dependencies.py  session_service.py
backend/src/chatbot/domain/: __init__.py  exceptions.py  language.py  models.py
backend/src/chatbot/infrastructure/: __init__.py  dependencies.py  settings.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AssistantMessage.tsx  AuthModal.tsx  ChatArea.tsx  ChatInput.tsx  FaithfulnessCard.tsx  MedicalChatbot.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useGroupedHistory.ts
frontend/src/types/: api.ts
shared/: __init__.py  arabic.py  image.py  json_utils.py  text.py
src/chatbot/: __init__.py
src/chatbot/application/: __init__.py  chat_service.py  dependencies.py  session_service.py
src/chatbot/domain/: __init__.py  exceptions.py  models.py
src/chatbot/infrastructure/: settings.py
src/chatbot/shared/: __init__.py  arabic_renderer.py
(+95 files in other folders)
