[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "altibbi-chatbot"
version = "0.1.0"
description = "Online-RAG medical chatbot"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "requests",
    "beautifulsoup4",
    "google-generativeai",
    "googlesearch-python",
    "tavily-python",
    "openai",
    "python-dotenv",
    "ddgs",
    "pymongo",
    "ragas",
    "arabic-reshaper",
    "python-bidi",
    "Pillow",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["altibbi*", "shared*"]
