[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "MedAtlas"
version = "0.1.0"
description = "Online-RAG medical chatbot"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "requests",
    "beautifulsoup4",
    "google-generativeai",
    "googlesearch-python",
    "tavily-python",
    "openai",
    "python-dotenv",
    "ddgs",
    "pymongo",
    "ragas",
    "redis",
    "arabic-reshaper",
    "python-bidi",
    "Pillow",
    "langchain-openai",
    "langchain-community",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["chatbot*", "shared*"]

[tool.setuptools.package-data]
"chatbot.domain.prompts" = ["*.md"]

[project.scripts]
medatlas-api = "chatbot.presentation.api.main:run"
